--- a/ZEPageControl/ZEPageView/View/ZEHeaderView.xib
+++ b/ZEPageControl/ZEPageView/View/ZEHeaderView.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="TopLeft" id="iN0-l3-epB" customClass="ZEHeaderView" customModule="ZEPageControl" customModuleProvider="target">
+        <view contentMode="TopLeft" id="iN0-l3-epB" customClass="ZEHeaderView" customModule="ZENote" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -49,8 +49,48 @@
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mHc-S7-As2">
-                            <rect key="frame" x="255" y="165" width="30" height="30"/>
+                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10087" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="95Q-8x-gpO">
+                            <rect key="frame" x="295" y="165" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="35" id="7ZG-Mn-4Y1"/>
+                                <constraint firstAttribute="width" constant="30" id="lBe-h8-JHT"/>
+                                <constraint firstAttribute="width" secondItem="95Q-8x-gpO" secondAttribute="height" id="p6W-td-dh2"/>
+                            </constraints>
+                            <state key="normal" image="jianshuLogo">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="layer.maskToBounds" value="true"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
+                            </userDefinedRuntimeAttributes>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="7ZG-Mn-4Y1"/>
+                                </mask>
+                            </variation>
+                            <connections>
+                                <action selector="buttonClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="JKT-AJ-oG2"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10088" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikw-La-oVO">
+                            <rect key="frame" x="333" y="165" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" secondItem="ikw-La-oVO" secondAttribute="height" id="Oh8-BU-d4O"/>
+                                <constraint firstAttribute="width" constant="30" id="Vlp-pV-Tip"/>
+                            </constraints>
+                            <state key="normal" image="githubLogo">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="layer.maskToBounds" value="true"/>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="buttonClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="AoL-Go-rQP"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10086" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mHc-S7-As2">
+                            <rect key="frame" x="257" y="165" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="4if-oY-bOJ"/>
                                 <constraint firstAttribute="width" constant="30" id="efb-Ww-8TR"/>
@@ -68,40 +108,9 @@
                                     <exclude reference="4if-oY-bOJ"/>
                                 </mask>
                             </variation>
-                        </button>
-                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="95Q-8x-gpO">
-                            <rect key="frame" x="295" y="165" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="35" id="7ZG-Mn-4Y1"/>
-                                <constraint firstAttribute="width" constant="30" id="lBe-h8-JHT"/>
-                                <constraint firstAttribute="width" secondItem="95Q-8x-gpO" secondAttribute="height" id="p6W-td-dh2"/>
-                            </constraints>
-                            <state key="normal" image="githubLogo">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="string" keyPath="layer.maskToBounds" value="true"/>
-                                <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
-                            </userDefinedRuntimeAttributes>
-                            <variation key="default">
-                                <mask key="constraints">
-                                    <exclude reference="7ZG-Mn-4Y1"/>
-                                </mask>
-                            </variation>
-                        </button>
-                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikw-La-oVO">
-                            <rect key="frame" x="335" y="165" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="ikw-La-oVO" secondAttribute="height" id="Oh8-BU-d4O"/>
-                                <constraint firstAttribute="width" constant="30" id="Vlp-pV-Tip"/>
-                            </constraints>
-                            <state key="normal" backgroundImage="jianshuLogo">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
-                                <userDefinedRuntimeAttribute type="string" keyPath="layer.maskToBounds" value="true"/>
-                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="buttonClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="r4x-BY-1vf"/>
+                            </connections>
                         </button>
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
@@ -156,9 +165,6 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="avatarImageView" destination="o0j-t3-Zcb" id="dto-H0-2Nr"/>
-                <outlet property="githubButton" destination="95Q-8x-gpO" id="clj-tx-ddr"/>
-                <outlet property="goldButton" destination="mHc-S7-As2" id="roN-sH-7J6"/>
-                <outlet property="jianshuButton" destination="ikw-La-oVO" id="y1c-XF-kkj"/>
             </connections>
             <point key="canvasLocation" x="294.5" y="516"/>
         </view>
