--- a/ZEPageControl/ZEPageView/View/ZEHeaderView.xib
+++ b/ZEPageControl/ZEPageView/View/ZEHeaderView.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="TopLeft" id="iN0-l3-epB" customClass="ZEHeaderView" customModule="ZENote" customModuleProvider="target">
+        <view contentMode="TopLeft" id="iN0-l3-epB" customClass="ZEHeaderView" customModule="ZEPageControl" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -19,9 +19,9 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="200"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="blogAvatar" translatesAutoresizingMaskIntoConstraints="NO" id="o0j-t3-Zcb">
-                            <rect key="frame" x="265" y="74" width="90" height="90"/>
+                            <rect key="frame" x="275" y="100" width="80" height="80"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="90" id="NPo-Tw-Y4V"/>
+                                <constraint firstAttribute="width" constant="80" id="NPo-Tw-Y4V"/>
                                 <constraint firstAttribute="width" secondItem="o0j-t3-Zcb" secondAttribute="height" multiplier="1:1" id="V7L-tr-bF3"/>
                             </constraints>
                             <userDefinedRuntimeAttributes>
@@ -50,11 +50,11 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10087" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="95Q-8x-gpO">
-                            <rect key="frame" x="295" y="165" width="30" height="30"/>
+                            <rect key="frame" x="300" y="60" width="30" height="30"/>
                             <constraints>
+                                <constraint firstAttribute="width" constant="30" id="2pA-lh-9Fm"/>
                                 <constraint firstAttribute="height" constant="35" id="7ZG-Mn-4Y1"/>
-                                <constraint firstAttribute="width" constant="30" id="lBe-h8-JHT"/>
-                                <constraint firstAttribute="width" secondItem="95Q-8x-gpO" secondAttribute="height" id="p6W-td-dh2"/>
+                                <constraint firstAttribute="width" secondItem="95Q-8x-gpO" secondAttribute="height" multiplier="1:1" id="Nsa-Hb-daU"/>
                             </constraints>
                             <state key="normal" image="jianshuLogo">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -72,29 +72,12 @@
                                 <action selector="buttonClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="JKT-AJ-oG2"/>
                             </connections>
                         </button>
-                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10088" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikw-La-oVO">
-                            <rect key="frame" x="333" y="165" width="30" height="30"/>
-                            <constraints>
-                                <constraint firstAttribute="width" secondItem="ikw-La-oVO" secondAttribute="height" id="Oh8-BU-d4O"/>
-                                <constraint firstAttribute="width" constant="30" id="Vlp-pV-Tip"/>
-                            </constraints>
-                            <state key="normal" image="githubLogo">
-                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
-                                <userDefinedRuntimeAttribute type="string" keyPath="layer.maskToBounds" value="true"/>
-                            </userDefinedRuntimeAttributes>
-                            <connections>
-                                <action selector="buttonClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="AoL-Go-rQP"/>
-                            </connections>
-                        </button>
-                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10086" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mHc-S7-As2">
-                            <rect key="frame" x="257" y="165" width="30" height="30"/>
+                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10086" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mHc-S7-As2">
+                            <rect key="frame" x="265" y="70" width="30" height="30"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="35" id="4if-oY-bOJ"/>
-                                <constraint firstAttribute="width" constant="30" id="efb-Ww-8TR"/>
-                                <constraint firstAttribute="width" secondItem="mHc-S7-As2" secondAttribute="height" id="szd-mT-4Ec"/>
+                                <constraint firstAttribute="width" constant="30" id="Iea-5e-yOq"/>
+                                <constraint firstAttribute="width" secondItem="mHc-S7-As2" secondAttribute="height" multiplier="1:1" id="Z41-MA-Yv6"/>
                             </constraints>
                             <state key="normal" image="goldLogo">
                                 <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -112,38 +95,57 @@
                                 <action selector="buttonClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="r4x-BY-1vf"/>
                             </connections>
                         </button>
+                        <button opaque="NO" clipsSubviews="YES" alpha="0.84999999999999998" tag="10088" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikw-La-oVO">
+                            <rect key="frame" x="335" y="70" width="30" height="30"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="30" id="HVv-YA-ik4"/>
+                                <constraint firstAttribute="width" secondItem="ikw-La-oVO" secondAttribute="height" multiplier="1:1" id="cCz-ZB-Lvf"/>
+                            </constraints>
+                            <state key="normal" image="githubLogo">
+                                <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="15"/>
+                                <userDefinedRuntimeAttribute type="string" keyPath="layer.maskToBounds" value="true"/>
+                            </userDefinedRuntimeAttributes>
+                            <connections>
+                                <action selector="buttonClick:" destination="iN0-l3-epB" eventType="touchUpInside" id="AoL-Go-rQP"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
                     <constraints>
+                        <constraint firstItem="ikw-La-oVO" firstAttribute="trailing" secondItem="o0j-t3-Zcb" secondAttribute="trailing" constant="10" id="1kF-td-S43"/>
                         <constraint firstItem="IYQ-2V-e7v" firstAttribute="top" secondItem="m8U-n9-Rcw" secondAttribute="bottom" constant="5" id="3H1-Z1-xzf"/>
                         <constraint firstItem="o0j-t3-Zcb" firstAttribute="top" secondItem="m8U-n9-Rcw" secondAttribute="top" constant="-10" id="8LC-1y-sHO"/>
                         <constraint firstItem="m8U-n9-Rcw" firstAttribute="leading" secondItem="CPw-lb-t0z" secondAttribute="leading" constant="15" id="FS5-mZ-nMc"/>
+                        <constraint firstItem="o0j-t3-Zcb" firstAttribute="top" secondItem="mHc-S7-As2" secondAttribute="bottom" id="JVU-0j-TaG"/>
                         <constraint firstAttribute="bottom" secondItem="o0j-t3-Zcb" secondAttribute="bottom" constant="5" id="KwA-nd-rdo"/>
-                        <constraint firstAttribute="trailing" secondItem="ikw-La-oVO" secondAttribute="trailing" constant="10" id="Mzr-9V-q2G"/>
                         <constraint firstItem="m8U-n9-Rcw" firstAttribute="top" secondItem="CPw-lb-t0z" secondAttribute="top" constant="84" id="N0a-xk-VuA"/>
-                        <constraint firstAttribute="bottom" secondItem="mHc-S7-As2" secondAttribute="bottom" constant="5" id="N5O-VC-HWi"/>
+                        <constraint firstItem="mHc-S7-As2" firstAttribute="leading" secondItem="o0j-t3-Zcb" secondAttribute="leading" constant="-10" id="NNt-08-yeu"/>
                         <constraint firstAttribute="trailing" secondItem="o0j-t3-Zcb" secondAttribute="trailing" constant="20" id="Rbx-hH-bdm"/>
+                        <constraint firstItem="o0j-t3-Zcb" firstAttribute="top" secondItem="95Q-8x-gpO" secondAttribute="bottom" constant="10" id="Tpf-71-BiF"/>
                         <constraint firstItem="o0j-t3-Zcb" firstAttribute="top" secondItem="CPw-lb-t0z" secondAttribute="top" constant="74" id="WKp-Y6-GEd"/>
                         <constraint firstItem="o0j-t3-Zcb" firstAttribute="leading" secondItem="m8U-n9-Rcw" secondAttribute="trailing" constant="10" id="WZ0-LK-aGB"/>
                         <constraint firstItem="mHc-S7-As2" firstAttribute="leading" secondItem="CPw-lb-t0z" secondAttribute="leading" constant="15" id="Wqw-0L-4pe"/>
-                        <constraint firstAttribute="bottom" secondItem="95Q-8x-gpO" secondAttribute="bottom" constant="5" id="XuV-n9-x63"/>
-                        <constraint firstItem="95Q-8x-gpO" firstAttribute="leading" secondItem="mHc-S7-As2" secondAttribute="trailing" constant="10" id="Zu3-Ec-r63"/>
+                        <constraint firstAttribute="bottom" secondItem="o0j-t3-Zcb" secondAttribute="bottom" constant="20" id="ZSs-ir-GAv"/>
                         <constraint firstItem="95Q-8x-gpO" firstAttribute="leading" secondItem="CPw-lb-t0z" secondAttribute="leading" constant="10" id="amL-zG-mJd"/>
-                        <constraint firstAttribute="bottom" secondItem="ikw-La-oVO" secondAttribute="bottom" constant="5" id="an5-LQ-Cpd"/>
+                        <constraint firstItem="o0j-t3-Zcb" firstAttribute="top" secondItem="ikw-La-oVO" secondAttribute="bottom" id="dkP-6o-NiQ"/>
                         <constraint firstItem="BRL-XE-5wI" firstAttribute="top" secondItem="IYQ-2V-e7v" secondAttribute="bottom" constant="30" id="eDr-QQ-bEz"/>
                         <constraint firstAttribute="trailing" secondItem="o0j-t3-Zcb" secondAttribute="trailing" constant="10" id="ido-ll-hv7"/>
+                        <constraint firstItem="95Q-8x-gpO" firstAttribute="centerX" secondItem="o0j-t3-Zcb" secondAttribute="centerX" id="jGW-d4-Gne"/>
                         <constraint firstItem="95Q-8x-gpO" firstAttribute="leading" secondItem="mHc-S7-As2" secondAttribute="trailing" constant="10" id="kSB-uy-RTm"/>
                         <constraint firstItem="BRL-XE-5wI" firstAttribute="leading" secondItem="CPw-lb-t0z" secondAttribute="leading" constant="15" id="l56-lE-TDT"/>
-                        <constraint firstItem="ikw-La-oVO" firstAttribute="leading" secondItem="95Q-8x-gpO" secondAttribute="trailing" constant="10" id="ltE-B6-gJC"/>
                         <constraint firstItem="IYQ-2V-e7v" firstAttribute="leading" secondItem="CPw-lb-t0z" secondAttribute="leading" constant="15" id="t0B-UG-0KP"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
+                            <exclude reference="Wqw-0L-4pe"/>
+                            <exclude reference="8LC-1y-sHO"/>
                             <exclude reference="KwA-nd-rdo"/>
                             <exclude reference="WKp-Y6-GEd"/>
                             <exclude reference="WZ0-LK-aGB"/>
                             <exclude reference="ido-ll-hv7"/>
-                            <exclude reference="Wqw-0L-4pe"/>
                             <exclude reference="amL-zG-mJd"/>
                             <exclude reference="kSB-uy-RTm"/>
                         </mask>
